syntax = "proto2";
package mmo.proto_client;

message RaceEntry {
	required uint32 id = 1;
	required string name = 2;
	required uint32 factionTemplate = 3;
	required uint32 malemodel = 4;
	required uint32 femalemodel = 5;
	required uint32 baselanguage = 6;
}

message Races {
	repeated RaceEntry entry = 1;
}
